@@ -838,10 +838,11 @@ struct cb_field {
 
 	unsigned int flag_any_numeric	: 1;	/* Is ANY NUMERIC */
 	unsigned int flag_is_returning	: 1;	/* Is RETURNING item */
-	unsigned int flag_unbounded : 1;	/* OCCURS UNBOUNDED */
+	unsigned int flag_unbounded	: 1;	/* OCCURS UNBOUNDED */
 
 	unsigned int flag_constant	: 1;	/* Is 01 AS CONSTANT */
 	unsigned int flag_internal_constant	: 1;	/* Is an internally generated CONSTANT */
+	unsigned int flag_comp_1	: 1;	/* Is USAGE COMP-1 */
 };
 
 #define CB_FIELD(x)		(CB_TREE_CAST (CB_TAG_FIELD, struct cb_field, x))
